Change html hight to min-height to fix bottom content clipping issue with fixed footer

--- a/app/_scss/partials/_base.scss
+++ b/app/_scss/partials/_base.scss
@@ -59,12 +59,12 @@ html {
   line-height: 1.4;
   font-family: $type-stack-main;
   text-size-adjust: 100%;
-  height: 100%
+  min-height: 100%
 }
 
 // Set margin (Normalize)
 body {
-  margin: 0;
+  margin: 0 0 $footer-height 0;
   height: 100%;
 }
 
